# absolute-cinema

./: .gitignore  README.md  pyproject.toml  requirements.txt
django_project/: .env.example  README.md  pyproject.toml
django_project/catalog/: admin.py  models.py  tests.py
django_project/catalog/api/: serializers.py  views.py
django_project/catalog/domain/: exceptions.py  models.py
django_project/catalog/migrations/: 0002_movie_available_in_plans_movie_is_free.py  0002_movie_is_free.py  0003_merge_20260522_1553.py
django_project/catalog/services/: services.py
django_project/catalog/tests/: test_catalog_api.py  test_interactions_api.py  test_subscriptions_api.py  test_users_api.py  tests.py
django_project/config/: asgi.py  settings.py  urls.py  wsgi.py
django_project/config/components/: apps.py  base_settings.py  cors.py  security.py
django_project/core/: exceptions.py
django_project/interactions/api/: serializers.py  urls.py
django_project/interactions/domain/: exceptions.py  models.py
django_project/interactions/migrations/: 0002_watchlist_movie_alter_watchlist_unique_together.py
django_project/interactions/services/: services.py
django_project/interactions/tests/: tests.py
django_project/subscriptions/: admin.py  services.py  tests.py
django_project/subscriptions/api/: serializers.py  urls.py  views.py
django_project/users/: admin.py  models.py  tests.py  views.py
fastapi_service/: .env.example  README.md  main.py  pyproject.toml
fastapi_service/tests/: test_auth.py  test_health.py  test_recommendations.py  test_search.py
flask_service/: .env.example  README.md  main.py  pyproject.toml  run.py
flask_service/app/: __init__.py  app.db  config.py
flask_service/tests/: test_health.py  test_moderation.py  test_reviews.py  test_validations.py
(+87 files in other folders)
