[project]
name = "absolute-cinema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.1",
    "django==6.0.3",
    "django-cors-headers==4.9.0",
    "django-filter>=25.2",
    "djangorestframework==3.17.0",
    "djangorestframework-simplejwt>=5.5.1",
    "python-dotenv==1.2.2",
    "sqlparse==0.5.5",
    "tzdata==2025.3",
]
